--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.0",
     "lucide-react": "^0.553.0",
     "@google/genai": "^1.29.0",
-    "framer-motion": "^12.23.24"
+    "framer-motion": "^12.23.24",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
