refactor: Rename project and update metadata
Renames the project from "GENRUN Bhopal Indore" to "GENRUN Cloud Sync" and updates the `package.json` and `metadata.json` files accordingly. This change reflects the expanded scope and centralized nature of the application.

Also introduces configuration for the shared hub API and adds new icons for potential features. Updates AIChat component to include a loading state and uses a new service for Gemini integration. Adds a `timestamp` field to `UserTicket` for better tracking.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "genrun-bhopal-indore",
+  "name": "genrun-cloud-sync",
   "private": true,
   "version": "0.0.0",
   "type": "module",
