--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "genrun-cloud-sync",
+  "name": "genrun-bhopal-indore",
   "private": true,
   "version": "0.0.0",
   "type": "module",
