--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "^0.553.0",
     "@google/genai": "^1.29.0",
     "framer-motion": "^12.23.24",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "jsqr": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
